# tinyBT

./: .gitignore  .pre-commit-config.yaml  .shellcheckrc  .travis.yml  Makefile  README.md  pyproject.toml
scripts/: clean.sh  coverage.sh  install-pre-commit-hook.sh  install.sh  test.sh  update-pre-commit-rules.sh  venv.sh
src/: bencode.py  crc32c.py  dht.py  krpc.py  tracker.py  utils.py
src/tinybt/: __main__.py  bencode.py  crc32c.py  dht.py  krpc.py  tracker.py  utils.py
src/tinybt/dht/: __init__.py  dht.py  node.py  router.py
src/tinybt/krpc/: __init__.py
src/tinybt/tracker/: __init__.py  http.py  udp.py
src/tinybt/utils/: __init__.py  bencode.py  client.py  crc32c.py  exception.py  socket.py  threadmanager.py
tests/bencode/: test_bdecode.py  test_bencode.py
tests/crc32c/: test_crc32c.py
tests/dht/: test_bep42_prefix.py
tests/utils/: test_decoders.py  test_encoders.py
tests/utils/bencode/: test_bdecode.py  test_bencode.py
tests/utils/crc32c/: test_crc32c.py
tests/utils/threadmanager/: test_start_thread.py
